--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -192,7 +192,7 @@
 
 
 
-            &._active {
+            &.active {
                 .header__logo_menu_static {
                     display: none;
                 }
@@ -494,6 +494,7 @@
             display: flex;
             width: 24px;
             height: 24px;
+            padding: 0;
 
             @include mobile {
                 width: 41px;
@@ -774,17 +775,13 @@
 
 .js-search-menu {
     position: fixed;
-    z-index: 5;
+    z-index: 10;
     top: 63px;
     left: 0;
     visibility: hidden;
     transition: 300ms ease;
     opacity: 0;
     width: 100%;
-    border-bottom: 1px solid #522516;
-    background: rgba(28, 27, 25, 0.90);
-    backdrop-filter: blur(17.549999237060547px);
-    padding: 40px 0 0;
 
     &.active {
         opacity: 1;
@@ -794,6 +791,26 @@
 
 .header-search {
     position: relative;
+
+    &__bg {
+        width: 100%;
+        height: 100vh;
+        background: rgba(16, 15, 14, 0.78);
+        backdrop-filter: blur(24.85px);
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: 1;
+    }
+
+    &__content {
+        border-bottom: 1px solid #522516;
+        background: rgba(28, 27, 25, 0.90);
+        backdrop-filter: blur(17.549999237060547px);
+        padding: 40px 0 0;
+        position: relative;
+        z-index: 2;
+    }
 
     &__block {
         width: 100%;
@@ -807,6 +824,10 @@
         top: 0;
         width: 100%;
         max-width: 186px;
+
+        @include mobile {
+            display: none;
+        }
     }
 
     &__search {
@@ -817,6 +838,13 @@
         display: flex;
         gap: 20px;
 
+        @include mobile {
+            flex-direction: column;
+            align-items: center;
+            gap: 5px;
+            padding: 10px;
+        }
+
         &_title {
             max-width: 160px;
             width: 100%;
@@ -826,6 +854,10 @@
             font-size: 15px;
             font-weight: 500;
             color: white;
+
+            @include mobile {
+                margin-bottom: 15px;
+            }
         }
 
         &_input {
@@ -851,6 +883,10 @@
         &_btn {
             max-width: 203px;
             width: 100%;
+
+            @include mobile {
+                max-width: 100%;
+            }
         }
 
     }
@@ -869,14 +905,37 @@
             grid-template-columns: repeat(5, 1fr);
             gap: 10px 20px;
             padding-bottom: 0;
+
+            @include mobile {
+                display: none;
+            }
+        }
+
+        .catalog-filter__info_select {
+            @include mobile {
+                max-width: 100%;
+            }
         }
     }
 
+    &__values {}
+
     &__looking {
+        @include mobile {
+            margin-top: 80px;
+        }
+
         .home-loop-block__title {
             top: 30px;
             margin: 0;
             width: 100%;
+
+            @include mobile {
+                width: 150%;
+                left: -25%;
+                overflow: visible;
+                top: 0;
+            }
         }
 
         .home-loop-block__title_bg {
@@ -889,6 +948,10 @@
             height: auto;
             padding: 15px 35px;
             overflow: auto;
+
+            @include mobile {
+                padding: 15px 80px;
+            }
 
 
             &::-webkit-scrollbar {
@@ -916,6 +979,13 @@
             font-size: 15px;
             font-weight: 500;
             min-width: max-content;
+
+            @include mobile {
+                position: absolute;
+                left: 50%;
+                transform: translateX(-50%);
+                top: -40px;
+            }
         }
     }
 }
