--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -1,5 +1,11 @@
 .home-main-slider {
     padding-top: 40px;
+    position: relative;
+
+    @include mobile {
+        margin-bottom: 60px;
+    }
+
 
     &__block {}
 
@@ -21,6 +27,10 @@
         overflow: hidden;
         position: relative;
 
+        @include mobile {
+            padding: 15px;
+        }
+
         &_bg {
             position: absolute;
             width: 100%;
@@ -30,10 +40,10 @@
 
             &_img {
                 position: absolute;
-                left: 0;
-                top: 0;
-                width: 100%;
-                height: 100%;
+                left: -3px;
+                top: -3px;
+                width: 105%;
+                height: 105%;
                 z-index: 1;
                 object-fit: cover;
             }
@@ -61,7 +71,12 @@
             position: relative;
 
             svg {
+                width: auto;
                 height: 27px;
+
+                @include mobile {
+                    height: 18px;
+                }
             }
 
             &._pc {
@@ -80,6 +95,23 @@
                     border-radius: 50%;
                 }
             }
+
+            &._ps {
+                color: #C83C56;
+
+                &::after {
+                    content: "";
+                    position: absolute;
+                    width: 50px;
+                    height: 50px;
+                    z-index: -1;
+                    left: -10px;
+                    bottom: -10px;
+                    filter: blur(30px);
+                    background-color: #C83C56;
+                    border-radius: 50%;
+                }
+            }
         }
 
         &_img {
@@ -90,24 +122,36 @@
         }
 
         &_block {
-            display: flex;
-            align-items: flex-end;
+            display: grid;
+            grid-template-columns: minmax(100px, 172px) 1fr;
             justify-content: space-between;
             position: relative;
             z-index: 2;
             margin-top: 120px;
+            gap: 20px
         }
 
         &_more {
             padding: 13px 38px;
             font-size: 15px;
             font-weight: 600;
+            align-self: end;
+
+            @include mobile {
+                font-size: 10px;
+                padding: 8px 18px;
+            }
         }
 
         &_cards {
             display: grid;
-            grid-template-columns: 133px 133px;
+            grid-template-columns: minmax(80px, 133px) minmax(80px, 133px);
             gap: 15px;
+            justify-content: flex-end;
+
+            @include mobile {
+                gap: 8px;
+            }
         }
 
         &_card {
@@ -117,10 +161,18 @@
             box-shadow: 0px 4px 11.3px 0px rgba(0, 0, 0, 0.25);
             position: relative;
 
+            @include mobile {
+                border-width: 2px;
+            }
+
             &_img {
                 object-fit: cover;
                 height: 158px;
                 border-radius: 5px;
+
+                @include mobile {
+                    height: 107px;
+                }
             }
 
             &_content {
@@ -132,20 +184,16 @@
             }
 
             &_dis {
-                font-size: 28px;
-                text-shadow: rgb(32, 30, 27) 5px 0px 0px, rgb(32, 30, 27) 4.90033px 0.993347px 0px, rgb(32, 30, 27) 4.60531px 1.94709px 0px, rgb(32, 30, 27) 4.12668px 2.82321px 0px, rgb(32, 30, 27) 3.48353px 3.58678px 0px, rgb(32, 30, 27) 2.70151px 4.20736px 0px, rgb(32, 30, 27) 1.81179px 4.6602px 0px, rgb(32, 30, 27) 0.849836px 4.92725px 0px, rgb(32, 30, 27) -0.145998px 4.99787px 0px, rgb(32, 30, 27) -1.13601px 4.86924px 0px, rgb(32, 30, 27) -2.08073px 4.54649px 0px, rgb(32, 30, 27) -2.94251px 4.04248px 0px, rgb(32, 30, 27) -3.68697px 3.37732px 0px, rgb(32, 30, 27) -4.28444px 2.57751px 0px, rgb(32, 30, 27) -4.71111px 1.67494px 0px, rgb(32, 30, 27) -4.94996px 0.7056px 0px, rgb(32, 30, 27) -4.99147px -0.291871px 0px, rgb(32, 30, 27) -4.83399px -1.27771px 0px, rgb(32, 30, 27) -4.48379px -2.2126px 0px, rgb(32, 30, 27) -3.95484px -3.05929px 0px, rgb(32, 30, 27) -3.26822px -3.78401px 0px, rgb(32, 30, 27) -2.4513px -4.35788px 0px, rgb(32, 30, 27) -1.53666px -4.75801px 0px, rgb(32, 30, 27) -0.560763px -4.96845px 0px, rgb(32, 30, 27) 0.437495px -4.98082px 0px, rgb(32, 30, 27) 1.41831px -4.79462px 0px, rgb(32, 30, 27) 2.34258px -4.41727px 0px, rgb(32, 30, 27) 3.17346px -3.86382px 0px, rgb(32, 30, 27) 3.87783px -3.15633px 0px, rgb(32, 30, 27) 4.4276px -2.32301px 0px, rgb(32, 30, 27) 4.80085px -1.39708px 0px, rgb(32, 30, 27) 4.98271px -0.415447px 0px;
-                color: #FFF;
-                font-family: $font-roboto;
-                font-weight: 900;
-                position: absolute;
 
                 &._top-left {
+                    position: absolute;
                     top: 0px;
-                    left: -30px;
+                    left: -20%;
                 }
 
                 &._right-bottom {
-                    right: -20px;
+                    position: absolute;
+                    right: -20%;
                     bottom: 0px;
                 }
             }
@@ -180,6 +228,123 @@
         }
     }
 
+    &__ps {
+        &_block {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+        }
+
+        &_cards {
+            margin-top: 35px;
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+        }
+
+        &_card {
+            position: relative;
+            width: 130%;
+
+            &_img {
+                position: relative;
+                display: flex;
+
+                &_item {
+                    width: 100%;
+                    height: 162px;
+                    object-fit: cover;
+                    border-radius: 5px;
+                    border: 1px solid #36332D;
+                }
+
+                &_dis {
+                    position: absolute;
+                    top: 6px;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    font-size: 16px;
+                    visibility: hidden;
+                    opacity: 0;
+                    transition: 300ms ease;
+                }
+            }
+
+            &_content {
+                position: absolute;
+                bottom: -55px;
+                left: 50%;
+                transform: translateX(-50%);
+                visibility: hidden;
+                opacity: 0;
+                transition: 300ms ease;
+            }
+
+            &_title {
+                font-size: 12px;
+                text-align: center;
+                margin-bottom: 7px;
+                margin-top: 5px;
+            }
+
+            &_btn {
+                font-size: 10px;
+                padding: 7px 20px;
+                width: max-content;
+                margin: auto;
+            }
+
+            &:nth-child(4) {
+                right: 30%;
+            }
+
+            &:hover {
+                z-index: 2;
+
+                .home-main-slider__ps_card_content {
+                    visibility: visible;
+                    opacity: 1;
+                }
+
+                .home-main-slider__ps_card_img_dis {
+                    visibility: visible;
+                    opacity: 1;
+                }
+            }
+        }
+
+        &_content {
+            display: flex;
+            flex-direction: column;
+
+            &_title {
+                color: #C83C56;
+                font-size: 21px;
+                font-weight: 900;
+                line-height: 1;
+                text-align: center;
+                width: max-content;
+            }
+
+            &_num {
+                font-size: 45px;
+                font-weight: 900;
+                font-family: $font-roboto;
+                line-height: 1;
+                text-align: center;
+                margin: 6px 0;
+            }
+
+            &_btn {
+                padding: 7px 20px;
+                font-size: 10px;
+                width: max-content;
+                margin: auto;
+            }
+        }
+    }
+
+
+
     .swiper-pagination {
         display: flex;
         align-items: center;
@@ -187,6 +352,12 @@
         justify-content: flex-end;
         bottom: 20px;
         top: inherit;
+
+        @include mobile {
+            bottom: -20px;
+            width: 100%;
+            justify-content: center;
+        }
     }
 }
 
@@ -1224,4 +1395,8 @@
     &._top {
         padding-top: 30px;
     }
+}
+
+.mb-5 {
+    margin-bottom: 40px;
 }
