--- a/src/partials/cart.html
+++ b/src/partials/cart.html
@@ -32,9 +32,9 @@
         </span>
     </div>
     <div class="new-card__overlay">
-        <div class="new-card__img">
+        <a href="cart.html" class="new-card__img">
             <img class="new-card__img_item" src="assets/images/home-new/card-image.jpg" alt="">
-        </div>
+        </a>
         <div class="new-card__content">
             <div class="new-card__title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime, quibusdam!</div>
             <div class="new-card__subtitle"><span class="new-card__subtitle_name">Жанр:</span> <span class="new-card__subtitle_item">Аркада</span></div>
