--- a/src/partials/cart-steam.html
+++ b/src/partials/cart-steam.html
@@ -1,8 +1,8 @@
 <div class="steam-card">
     <div class="steam-card__img">
-        <div class="steam-card__img_item">
+        <a href="cart.html" class="steam-card__img_item">
             <img src="assets/images/home-new/card-image.jpg" alt="">
-        </div>
+        </a>
         <div class="steam-card__title">Lorem ipsum dolor sit amet</div>
         <div class="steam-card__discount">25%</div>
         <div class="steam-card__new">New</div>
