--- a/src/partials/main-footer.html
+++ b/src/partials/main-footer.html
@@ -66,8 +66,8 @@
                 <div class="footer-contact__block">
                     <div class="footer-contact__links">
                         <div class="footer-contact__menu">
-                            <a class="footer-contact__menu_item" href="#">Магазин</a>
-                            <a class="footer-contact__menu_item" href="#">Отзывы</a>
+                            <a class="footer-contact__menu_item" href="catalog.html">Магазин</a>
+                            <a class="footer-contact__menu_item" href="reviews.html">Отзывы</a>
                             <a class="footer-contact__menu_item" href="#">Гарантии</a>
                             <a class="footer-contact__menu_item" href="#">Доставка</a>
                             <a class="footer-contact__menu_item" href="#">Как купить</a>
@@ -133,7 +133,7 @@
                     © 2024 - GameBis.com <span class="footer-bottom__text_white">Все права защищены</span>
                 </div>
                 <div class="footer-bottom__links">
-                    <a href="#" class="footer-bottom__link">О магазине</a>
+                    <a href="about.html" class="footer-bottom__link">О магазине</a>
                     <a href="#" class="footer-bottom__link">Вакансии</a>
                     <a href="#" class="footer-bottom__link">Партнерская программа</a>
                     <a href="#" class="footer-bottom__link">Соглашение</a>
