--- a/src/partials/main-header.html
+++ b/src/partials/main-header.html
@@ -295,8 +295,8 @@
                 <div class="logo-menu__content">
                     <div class="logo-menu__content_title">GameBis</div>
                     <ul class="logo-menu__menu">
-                        <li><a href="#" class="logo-menu__item">О магазине</a></li>
-                        <li><a href="#" class="logo-menu__item">Отзывы</a></li>
+                        <li><a href="about.html" class="logo-menu__item">О магазине</a></li>
+                        <li><a href="reviews.html" class="logo-menu__item">Отзывы</a></li>
                         <li><a href="#" class="logo-menu__item">Как покупать</a></li>
                         <li><a href="#" class="logo-menu__item">Доставка</a></li>
                         <li><a href="#" class="logo-menu__item">Гарантии</a></li>
