--- a/src/assets/scss/pages/_mobile-games.scss
+++ b/src/assets/scss/pages/_mobile-games.scss
@@ -67,7 +67,7 @@
         margin-left: auto;
         padding-right: 40px;
 
-        @include mobile{
+        @include mobile {
             padding: 0;
             margin: 0 auto;
         }
@@ -365,6 +365,7 @@
         display: flex;
         flex-direction: column;
         position: relative;
+        cursor: pointer;
 
         input {
             display: none;
