--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -230,8 +230,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
-
-            background: linear-gradient(90deg, #873D25, #FF6C3D);
+            background: #6E3A28;
+            height: 50px;
 
             @include mobile {
                 display: flex;
@@ -303,6 +303,11 @@
             }
 
             &_svg {
+                svg {
+                    width: 22px;
+                    height: 22px;
+                }
+
                 @include netbook {
                     transform: scale(0.7);
                 }
@@ -315,6 +320,8 @@
                         height: 35px;
                     }
                 }
+
+
             }
 
             &_text {
@@ -326,7 +333,7 @@
             }
 
             &_title {
-                font-size: 16px;
+                font-size: 12px;
                 font-weight: 500;
                 color: #C3B8A2;
                 transition: 200ms ease;
@@ -343,7 +350,7 @@
             }
 
             &_subtitle {
-                font-size: 10px;
+                font-size: 8px;
                 font-weight: 300;
                 color: #C3B8A2;
 
@@ -405,18 +412,28 @@
         }
 
         &-catalog {
-            width: 100%;
+            width: auto;
+
+            .catalog__header {
+                display: none;
+            }
+
+            .catalog__tabs_content {
+                grid-column-start: 1;
+                grid-column-end: 8;
+            }
 
 
             .catalog__tabs {
-                background-color: #0B0A09;
+                background-color: transparent;
                 border: none;
-                grid-template-columns: repeat(8, 1fr);
+                grid-template-columns: repeat(7, 1fr);
                 border-radius: 0;
             }
 
             .catalog__tab_btn {
-                padding: 4px;
+                width: 88px;
+                padding: 3px;
             }
 
             .catalog__tab_svg {
