--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -1,7 +1,7 @@
 .header {
     position: fixed;
     width: 100%;
-    height: 96px;
+    height: 106px;
     display: flex;
     align-items: center;
     top: 0;
@@ -10,16 +10,39 @@
     border-bottom: 1px solid #1C1B19;
     box-shadow: 0px 0px 22.2px -3px #282620 inset, 0px 9px 11.8px -3px rgba(0, 0, 0, 0.25);
 
+    .container {
+        height: 100%;
+    }
+
     /* left */
     &__shape-1 {
         position: absolute;
         top: 0;
         left: 0;
-        width: calc(50% - 380px);
-        min-width: 260px;
-        height: 63px;
+        width: calc(50% - 600px);
+        min-width: 100px;
+        height: 53px;
         background: linear-gradient(91deg, #1C1B19 -0.04%, #2E2920 109.69%);
-        clip-path: polygon(0 0, 88% 0, 100% 100%, 0% 100%);
+        clip-path: polygon(0 0, 40px 0%, 100% 100%, 0% 100%);
+
+        @include netbook {
+            min-width: 230px;
+        }
+
+        @include mobile {
+            min-width: 100px;
+        }
+    }
+
+    &__shape-1b {
+        position: absolute;
+        top: 50%;
+        left: 0;
+        width: calc(50% - 600px);
+        min-width: 100px;
+        height: 53px;
+        background: linear-gradient(91deg, #1C1B19 -0.04%, #2E2920 109.69%);
+        clip-path: polygon(0 0, 100% 0, 420px 100%, 0% 100%);
 
         @include netbook {
             min-width: 230px;
@@ -34,8 +57,8 @@
         position: absolute;
         bottom: 0;
         left: 0;
-        width: calc(50% - 380px);
-        min-width: 260px;
+        width: calc(50% - 600px);
+        min-width: 100px;
         height: 15px;
         background: linear-gradient(90deg, rgba(135, 61, 37, 0.35) -0.17%, rgba(255, 108, 61, 0.35) 48.02%);
         clip-path: polygon(0 0, 0 0, 100% 100%, 0% 100%);
@@ -53,8 +76,8 @@
         position: absolute;
         bottom: -16px;
         left: 0;
-        width: calc(50% - 380px);
-        min-width: 260px;
+        width: calc(50% - 600px);
+        min-width: 100px;
         height: 15px;
         background: linear-gradient(157.72deg, rgba(135, 61, 37, 0.11) -0.323%, rgba(255, 108, 61, 0.11) 92.563%);
         clip-path: polygon(0 0, 100% 0, 0 100%, 0% 100%);
@@ -68,17 +91,46 @@
         }
     }
 
+    &__shape-arrow {
+        width: 100%;
+        height: 1px;
+        position: absolute;
+        z-index: 1;
+        left: 0;
+        top: 50%;
+        background-color: #1B1917;
+    }
+
     /* right */
 
     &__shape-4 {
         position: absolute;
         top: 0;
         right: 0;
-        width: calc(50% - 380px);
-        min-width: 260px;
-        height: 63px;
-        background: linear-gradient(180deg, #1C1B19 -0.04%, #2E2920 109.69%);
+        width: calc(50% - 600px);
+        min-width: 100px;
+        height: 53px;
+        background: linear-gradient(90deg, rgba(46, 41, 32, 1) 0%, rgba(28, 27, 25, 1) 100%);
         clip-path: polygon(12% 0, 100% 0%, 100% 100%, 0% 100%);
+
+        @include netbook {
+            min-width: 230px;
+        }
+
+        @include mobile {
+            min-width: 100px;
+        }
+    }
+
+    &__shape-4b {
+        position: absolute;
+        top: 50%;
+        right: 0;
+        width: calc(50% - 600px);
+        min-width: 100px;
+        height: 53px;
+        background: linear-gradient(90deg, rgba(46, 41, 32, 1) 0%, rgba(28, 27, 25, 1) 100%);
+        clip-path: polygon(0 0, 100% 0%, 100% 100%, 12% 100%);
 
         @include netbook {
             min-width: 230px;
@@ -93,8 +145,8 @@
         position: absolute;
         bottom: 0;
         right: 0;
-        width: calc(50% - 380px);
-        min-width: 260px;
+        width: calc(50% - 600px);
+        min-width: 100px;
         height: 15px;
         background: linear-gradient(180deg, rgba(135, 61, 37, 0.35) -0.17%, rgba(255, 108, 61, 0.35) 48.02%);
         clip-path: polygon(100% 0, 100% 100%, 0 100%, 0% 100%);
@@ -112,8 +164,8 @@
         position: absolute;
         bottom: -16px;
         right: 0;
-        width: calc(50% - 380px);
-        min-width: 260px;
+        width: calc(50% - 600px);
+        min-width: 100px;
         height: 15px;
         background: linear-gradient(157.72deg, rgba(135, 61, 37, 0.11) -0.323%, rgba(255, 108, 61, 0.11) 92.563%);
         clip-path: polygon(100% 0, 100% 100%, 0 0, 0 0);
@@ -231,7 +283,9 @@
             align-items: center;
             justify-content: center;
             background: #6E3A28;
-            height: 50px;
+            height: 54px;
+            clip-path: polygon(25% 0%, 75% 0%, 100% 0, 94% 100%, 6% 100%, 0 0);
+            width: calc(100% + 80px);
 
             @include mobile {
                 display: flex;
