--- a/src/partials/main-header.html
+++ b/src/partials/main-header.html
@@ -1,11 +1,19 @@
 <header class="header">
     <!-- Left Shapes -->
     <div class="header__shape-1"></div>
+    <div class="header__shape-1b"></div>
+
     <div class="header__shape-2"></div>
     <div class="header__shape-3"></div>
 
+
+    <div class="header__shape-arrow"></div>
+
+
+
     <!-- Right Shapes -->
     <div class="header__shape-4"></div>
+    <div class="header__shape-4b"></div>
     <div class="header__shape-5"></div>
     <div class="header__shape-6"></div>
 
