--- a/src/partials/main-header.html
+++ b/src/partials/main-header.html
@@ -1,7 +1,7 @@
 <header class="header">
     <!-- Left Shapes -->
-    <div class="header__shape-1"></div>
-    <div class="header__shape-1b"></div>
+    <div class="header__shape-1 clip-element" data-clip-position="right" data-clip-path="polygon(0 0, 35px 0%, 100% 100%, 0% 100%)"></div>
+    <div class="header__shape-1b clip-element" data-clip-position="right" data-clip-path="polygon(0 0, 100% 0%, 35px 100%, 0% 100%)"></div>
 
     <div class="header__shape-2"></div>
     <div class="header__shape-3"></div>
@@ -12,8 +12,8 @@
 
 
     <!-- Right Shapes -->
-    <div class="header__shape-4"></div>
-    <div class="header__shape-4b"></div>
+    <div class="header__shape-4 clip-element" data-clip-position="left" data-clip-path="polygon(35px 0, 100% 0, 100% 100%, 0% 100%)"></div>
+    <div class="header__shape-4b clip-element" data-clip-position="left" data-clip-path="polygon(0 0, 100% 0%, 100% 100%, 35px 100%)"></div>
     <div class="header__shape-5"></div>
     <div class="header__shape-6"></div>
 
@@ -1180,7 +1180,7 @@
                         </div>
 
                     </div>
-                    <div class="catalog__bg"></div>
+                    <!-- <div class="catalog__bg"></div> -->
 
                 </div>
             </div>
