--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -10,8 +10,14 @@
     border-bottom: 1px solid #1C1B19;
     box-shadow: 0px 0px 22.2px -3px #282620 inset, 0px 9px 11.8px -3px rgba(0, 0, 0, 0.25);
 
+    @include mobile {
+        height: 64px;
+    }
+
     .container {
         height: 100%;
+        position: relative;
+        z-index: 10;
     }
 
     /* left */
@@ -19,57 +25,79 @@
         position: absolute;
         top: 0;
         left: 0;
-        width: calc(50% - 600px);
+        width: calc(50% - 550px);
         min-width: 100px;
         height: 53px;
-        background: linear-gradient(91deg, #1C1B19 -0.04%, #2E2920 109.69%);
-        /* clip-path: polygon(0 0, 35px 0%, 100% 100%, 0% 100%); */
-
-        @include netbook {
-            min-width: 230px;
-        }
-
-        @include mobile {
-            min-width: 100px;
-        }
+        background: linear-gradient(90deg, rgba(34, 32, 28, 1) 0%, rgba(44, 40, 32, 1) 100%);
+        z-index: 5;
     }
 
     &__shape-1b {
         position: absolute;
         top: 50%;
         left: 0;
-        width: calc(50% - 600px);
+        width: calc(50% - 550px);
         min-width: 100px;
         height: 53px;
-        background: linear-gradient(91deg, #1C1B19 -0.04%, #2E2920 109.69%);
-        /* clip-path: polygon(0 0, 100% 0%, 35px 100%, 0% 100%); */
-
-        @include netbook {
-            min-width: 230px;
-        }
-
-        @include mobile {
-            min-width: 100px;
-        }
+        background: linear-gradient(90deg, rgba(34, 32, 28, 1) 0%, rgba(44, 40, 32, 1) 100%);
+        z-index: 5;
     }
+
+    &__shape-1-1 {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: calc(50% - 500px);
+        min-width: 100px;
+        height: 53px;
+        background: linear-gradient(90deg, rgba(39, 36, 30, 1) 0%, rgba(40, 37, 30, 1) 100%);
+        z-index: 4;
+    }
+
+    &__shape-1-1b {
+        position: absolute;
+        top: 50%;
+        left: 0;
+        width: calc(50% - 500px);
+        min-width: 100px;
+        height: 53px;
+        background: linear-gradient(90deg, rgba(39, 36, 30, 1) 0%, rgba(40, 37, 30, 1) 100%);
+        z-index: 4;
+    }
+
+    &__shape-1-2 {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: calc(50% - 450px);
+        min-width: 100px;
+        height: 53px;
+        background: linear-gradient(90deg, rgba(34, 32, 29, 1) 0%, rgba(34, 32, 29, 1) 100%);
+        z-index: 3;
+    }
+
+    &__shape-1-2b {
+        position: absolute;
+        top: 50%;
+        left: 0;
+        width: calc(50% - 450px);
+        min-width: 100px;
+        height: 53px;
+        background: linear-gradient(90deg, rgba(34, 32, 29, 1) 0%, rgba(34, 32, 29, 1) 100%);
+        z-index: 3;
+    }
+
 
     &__shape-2 {
         position: absolute;
         bottom: 0;
         left: 0;
         width: calc(50% - 600px);
-        min-width: 100px;
+        min-width: auto;
         height: 15px;
         background: linear-gradient(90deg, rgba(135, 61, 37, 0.35) -0.17%, rgba(255, 108, 61, 0.35) 48.02%);
         clip-path: polygon(0 0, 0 0, 100% 100%, 0% 100%);
-
-        @include netbook {
-            min-width: 230px;
-        }
-
-        @include mobile {
-            min-width: 100px;
-        }
+        z-index: 5;
     }
 
     &__shape-3 {
@@ -77,27 +105,19 @@
         bottom: -16px;
         left: 0;
         width: calc(50% - 600px);
-        min-width: 100px;
+        min-width: auto;
         height: 15px;
         background: linear-gradient(157.72deg, rgba(135, 61, 37, 0.11) -0.323%, rgba(255, 108, 61, 0.11) 92.563%);
         clip-path: polygon(0 0, 100% 0, 0 100%, 0% 100%);
-
-        @include netbook {
-            min-width: 230px;
-        }
-
-        @include mobile {
-            min-width: 100px;
-        }
     }
 
     &__shape-arrow {
         width: 100%;
         height: 1px;
         position: absolute;
-        z-index: 1;
+        z-index: 6;
         left: 0;
-        top: 50%;
+        top: calc(50% + 1px);
         background-color: #1B1917;
     }
 
@@ -107,76 +127,104 @@
         position: absolute;
         top: 0;
         right: 0;
-        width: calc(50% - 600px);
+        width: calc(50% - 550px);
         min-width: 100px;
         height: 53px;
         background: linear-gradient(90deg, rgba(46, 41, 32, 1) 0%, rgba(28, 27, 25, 1) 100%);
-        /* clip-path: polygon(12% 0, 100% 0%, 100% 100%, 0% 100%); */
-
-        @include netbook {
-            min-width: 230px;
-        }
-
-        @include mobile {
-            min-width: 100px;
-        }
+        z-index: 5;
     }
 
     &__shape-4b {
         position: absolute;
         top: 50%;
         right: 0;
-        width: calc(50% - 600px);
+        width: calc(50% - 550px);
         min-width: 100px;
         height: 53px;
         background: linear-gradient(90deg, rgba(46, 41, 32, 1) 0%, rgba(28, 27, 25, 1) 100%);
-        /* clip-path: polygon(0 0, 100% 0%, 100% 100%, 12% 100%); */
+        z-index: 5;
+    }
 
-        @include netbook {
-            min-width: 230px;
-        }
+    &__shape-4-1 {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: calc(50% - 500px);
+        min-width: 100px;
+        height: 53px;
+        background: linear-gradient(270deg, rgba(39, 36, 30, 1) 0%, rgba(40, 37, 30, 1) 100%);
+        z-index: 4;
+    }
 
-        @include mobile {
-            min-width: 100px;
-        }
+    &__shape-4-1b {
+        position: absolute;
+        top: 50%;
+        right: 0;
+        width: calc(50% - 500px);
+        min-width: 100px;
+        height: 53px;
+        background: linear-gradient(270deg, rgba(39, 36, 30, 1) 0%, rgba(40, 37, 30, 1) 100%);
+        z-index: 4;
+    }
+
+    &__shape-4-2 {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: calc(50% - 450px);
+        min-width: 100px;
+        height: 53px;
+        background: linear-gradient(270deg, rgba(34, 32, 29, 1) 0%, rgba(34, 32, 29, 1) 100%);
+        z-index: 3;
+    }
+
+    &__shape-4-2b {
+        position: absolute;
+        top: 50%;
+        right: 0;
+        width: calc(50% - 450px);
+        min-width: 100px;
+        height: 53px;
+        background: linear-gradient(270deg, rgba(34, 32, 29, 1) 0%, rgba(34, 32, 29, 1) 100%);
+        z-index: 3;
     }
 
     &__shape-5 {
         position: absolute;
         bottom: 0;
         right: 0;
-        width: calc(50% - 600px);
-        min-width: 100px;
+        width: calc(50% - 640px);
+        min-width: auto;
         height: 15px;
         background: linear-gradient(180deg, rgba(135, 61, 37, 0.35) -0.17%, rgba(255, 108, 61, 0.35) 48.02%);
         clip-path: polygon(100% 0, 100% 100%, 0 100%, 0% 100%);
 
-        @include netbook {
+        /*         @include netbook {
             min-width: 230px;
         }
 
         @include mobile {
             min-width: 100px;
-        }
+        } */
     }
 
     &__shape-6 {
         position: absolute;
         bottom: -16px;
         right: 0;
-        width: calc(50% - 600px);
-        min-width: 100px;
+        width: calc(50% - 640px);
+        min-width: auto;
         height: 15px;
         background: linear-gradient(157.72deg, rgba(135, 61, 37, 0.11) -0.323%, rgba(255, 108, 61, 0.11) 92.563%);
         clip-path: polygon(100% 0, 100% 100%, 0 0, 0 0);
 
-        @include netbook {
+        /*         @include netbook {
             min-width: 230px;
         }
 
         @include mobile {
             min-width: 100px;
-        }
+        } */
     }
 
     &__block {
@@ -192,6 +240,8 @@
         align-items: center;
         gap: 30px;
         width: 20%;
+        position: relative;
+        z-index: 2;
 
         @include netbook {
             gap: 15px;
@@ -267,7 +317,7 @@
             visibility: hidden;
             opacity: 0;
             position: absolute;
-            top: 135px;
+            top: 150px;
             width: 100%;
             left: 0;
             transition: 300ms ease;
@@ -284,12 +334,15 @@
             justify-content: center;
             background: #6E3A28;
             height: 54px;
-            clip-path: polygon(25% 0%, 75% 0%, 100% 0, 95% 100%, 5% 100%, 0 0);
-            width: calc(100% + 80px);
+            clip-path: polygon(0 0, 100% 0, 95.5% 100%, 40px 100%);
+            width: calc(100% + 140px);
 
             @include mobile {
                 display: flex;
                 flex-direction: column;
+                background-color: transparent;
+                height: auto;
+                width: 100%;
             }
         }
 
@@ -475,6 +528,7 @@
             .catalog__tabs_content {
                 grid-column-start: 1;
                 grid-column-end: 8;
+                margin-top: 1px;
             }
 
 
@@ -487,7 +541,7 @@
 
             .catalog__tab_btn {
                 width: 88px;
-                padding: 3px;
+                padding: 4px;
             }
 
             .catalog__tab_svg {
@@ -755,6 +809,10 @@
     &.active {
         opacity: 1;
         visibility: visible;
+    }
+
+    @include mobile {
+        top: 63px;
     }
 }
 
