--- a/src/partials/main-header.html
+++ b/src/partials/main-header.html
@@ -2,6 +2,10 @@
     <!-- Left Shapes -->
     <div class="header__shape-1 clip-element" data-clip-position="right" data-clip-path="polygon(0 0, 35px 0%, 100% 100%, 0% 100%)"></div>
     <div class="header__shape-1b clip-element" data-clip-position="right" data-clip-path="polygon(0 0, 100% 0%, 35px 100%, 0% 100%)"></div>
+    <div class="header__shape-1-1 clip-element" data-clip-position="right" data-clip-path="polygon(0 0, 35px 0%, 100% 100%, 0% 100%)"></div>
+    <div class="header__shape-1-1b clip-element" data-clip-position="right" data-clip-path="polygon(0 0, 100% 0%, 35px 100%, 0% 100%)"></div>
+    <div class="header__shape-1-2 clip-element" data-clip-position="right" data-clip-path="polygon(0 0, 35px 0%, 100% 100%, 0% 100%)"></div>
+    <div class="header__shape-1-2b clip-element" data-clip-position="right" data-clip-path="polygon(0 0, 100% 0%, 35px 100%, 0% 100%)"></div>
 
     <div class="header__shape-2"></div>
     <div class="header__shape-3"></div>
@@ -14,6 +18,10 @@
     <!-- Right Shapes -->
     <div class="header__shape-4 clip-element" data-clip-position="left" data-clip-path="polygon(35px 0, 100% 0, 100% 100%, 0% 100%)"></div>
     <div class="header__shape-4b clip-element" data-clip-position="left" data-clip-path="polygon(0 0, 100% 0%, 100% 100%, 35px 100%)"></div>
+    <div class="header__shape-4-1 clip-element" data-clip-position="left" data-clip-path="polygon(35px 0, 100% 0, 100% 100%, 0% 100%)"></div>
+    <div class="header__shape-4-1b clip-element" data-clip-position="left" data-clip-path="polygon(0 0, 100% 0%, 100% 100%, 35px 100%)"></div>
+    <div class="header__shape-4-2 clip-element" data-clip-position="left" data-clip-path="polygon(35px 0, 100% 0, 100% 100%, 0% 100%)"></div>
+    <div class="header__shape-4-2b clip-element" data-clip-position="left" data-clip-path="polygon(0 0, 100% 0%, 100% 100%, 35px 100%)"></div>
     <div class="header__shape-5"></div>
     <div class="header__shape-6"></div>
 
