--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -7,8 +7,19 @@
     top: 0;
     z-index: 10;
     background-color: $dark;
-    border-bottom: 1px solid #1C1B19;
+    /* border-bottom: 1px solid #1C1B19; */
     box-shadow: 0px 0px 22.2px -3px #282620 inset, 0px 9px 11.8px -3px rgba(0, 0, 0, 0.25);
+
+    &::after{
+        content: "";
+        width: 100%;
+        height: 1px;
+        background: linear-gradient(90deg, rgba(250, 114, 71, 0.9) 0%, rgba(29, 26, 24, 1) 50%, rgba(250, 114, 71, 0.9) 100%);
+        left: 0;
+        bottom: 0;
+        position: absolute;
+        z-index: 10;
+    }
 
     @include mobile {
         height: 64px;
@@ -97,6 +108,18 @@
         height: 15px;
         background: linear-gradient(90deg, rgba(135, 61, 37, 0.35) -0.17%, rgba(255, 108, 61, 0.35) 48.02%);
         clip-path: polygon(0 0, 0 0, 100% 100%, 0% 100%);
+        z-index: 5;
+    }
+
+    &__shape-2t {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: calc(50% - 600px);
+        min-width: auto;
+        height: 15px;
+        background: linear-gradient(90deg, rgba(45, 35, 29, 1) 0%, rgba(66, 46, 34, 1) 100%);
+        clip-path: polygon(0 0, 0 0, 100% 0, 0% 100%);
         z-index: 5;
     }
 
@@ -193,38 +216,36 @@
         position: absolute;
         bottom: 0;
         right: 0;
-        width: calc(50% - 640px);
+        width: calc(50% - 600px);
         min-width: auto;
         height: 15px;
         background: linear-gradient(180deg, rgba(135, 61, 37, 0.35) -0.17%, rgba(255, 108, 61, 0.35) 48.02%);
         clip-path: polygon(100% 0, 100% 100%, 0 100%, 0% 100%);
+        z-index: 5;
+    }
 
-        /*         @include netbook {
-            min-width: 230px;
-        }
-
-        @include mobile {
-            min-width: 100px;
-        } */
+    &__shape-5t {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: calc(50% - 600px);
+        min-width: auto;
+        height: 15px;
+        background: linear-gradient(270deg, rgba(45, 35, 29, 1) 0%, rgba(66, 46, 34, 1) 100%);
+        clip-path: polygon(0 0, 100% 100%, 100% 0);
+        z-index: 5;
     }
 
     &__shape-6 {
         position: absolute;
         bottom: -16px;
         right: 0;
-        width: calc(50% - 640px);
+        width: calc(50% - 600px);
         min-width: auto;
         height: 15px;
         background: linear-gradient(157.72deg, rgba(135, 61, 37, 0.11) -0.323%, rgba(255, 108, 61, 0.11) 92.563%);
         clip-path: polygon(100% 0, 100% 100%, 0 0, 0 0);
 
-        /*         @include netbook {
-            min-width: 230px;
-        }
-
-        @include mobile {
-            min-width: 100px;
-        } */
     }
 
     &__block {
@@ -932,7 +953,7 @@
 .js-search-menu {
     position: fixed;
     z-index: 10;
-    top: 96px;
+    top: 105px;
     left: 0;
     visibility: hidden;
     transition: 300ms ease;
