--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -24,7 +24,7 @@
         border-radius: 10px;
         border: 1px solid #36332D;
         background: linear-gradient(0deg, rgba(22, 21, 19, 0.92) 0%, rgba(22, 21, 19, 0.92) 100%);
-        padding: 20px 30px;
+        padding: 20px 30px 50px;
         overflow: hidden;
         position: relative;
 
@@ -181,7 +181,7 @@
 
         &_cards {
             display: grid;
-            grid-template-columns: minmax(80px, 133px) minmax(80px, 133px);
+            grid-template-columns: minmax(100px, 170px) minmax(100px, 170px);
             gap: 15px;
             justify-content: flex-end;
 
@@ -203,7 +203,7 @@
 
             &_img {
                 object-fit: cover;
-                height: 158px;
+                height: 190px;
                 border-radius: 5px;
 
                 @include mobile {
