--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -12,7 +12,7 @@
 
     &__slide {
         display: grid;
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr 1fr;
         gap: 20px;
 
         @include netbook {
@@ -181,7 +181,7 @@
 
         &_cards {
             display: grid;
-            grid-template-columns: minmax(100px, 170px) minmax(100px, 170px);
+            grid-template-columns: minmax(100px, 130px) minmax(100px, 130px);
             gap: 15px;
             justify-content: flex-end;
 
@@ -203,7 +203,7 @@
 
             &_img {
                 object-fit: cover;
-                height: 190px;
+                height: 150px;
                 border-radius: 5px;
 
                 @include mobile {
