--- a/src/assets/scss/pages/_catalog.scss
+++ b/src/assets/scss/pages/_catalog.scss
@@ -1,6 +1,6 @@
 .catalog-slider {
-    padding-top: 20px;
-    padding-bottom: 45px;
+    margin-top: 30px;
+    margin-bottom: 45px;
 
     &__title {
         display: flex;
