--- a/src/assets/scss/pages/_cart.scss
+++ b/src/assets/scss/pages/_cart.scss
@@ -34,6 +34,9 @@
 }
 
 .cart-item {
+    padding-top: 30px;
+    padding-bottom: 30px;
+
     &__block {
         display: grid;
         grid-template-columns: minmax(300px, 390px) minmax(400px, 1fr);
